# instance-sleeper

./: .gitignore  README.md  requirements.txt  setup.cfg
src/instancesleeper/: cli.py  sleeper.py
