[metadata]
name = instancesleeper
version = 0.0.1
description = Instance sleeper
long_description = file: README.md
license = Apache 2

[options]
packages = find:
package_dir =
    =src
install_requires =
    openstacksdk
    dateparser

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    instancesleeper = instancesleeper.cli:run
